crates/jolt_java_fmt/tests/snapshots/corpus__syntax__recovery__catch_parameter_modifiers.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class C {
  void m() {
    try {
    } catch (final /* mod */ E e) {
    }
  }
}

diagnostics:
(none)
