crates/jolt_java_fmt/tests/snapshots/corpus__syntax__recovery__empty_statement_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class C {
  void m(boolean ready) {
    while (ready) {
      // keep
    }
  }
}

diagnostics:
(none)
